--- a/client/src/App.css
+++ b/client/src/App.css
@@ -212,6 +212,18 @@
   margin-right: 25%;
 }
 
+.inputFieldTwoColumns {
+  max-width: 75%;
+  margin-left: 12%;
+  margin-top: 5%
+}
+
+.inputField {
+  max-width: 85%;
+  margin: auto;
+}
+
+
 
 /* build Heading
 build subheading
