--- a/client/src/App.css
+++ b/client/src/App.css
@@ -180,8 +180,7 @@
 }
 
 .profileImage {
-  width: 100;
-  height: 100;
+  max-width: 250px;
 }
 
 .ingredientListDelete {
@@ -221,6 +220,18 @@
 .inputField {
   max-width: 85%;
   margin: auto;
+}
+
+.profileCard {
+  width: 40%;
+  margin-top: 3%;
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 3%;
+  padding-left: 5%;
+  padding-top: 3%;
+  padding-bottom: 3%;
+  box-shadow: 0px 5px 15px 0px rgba(0, 0, 0, 0.5);
 }
 
 
